# uni-lm

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: main.yml  ruff.yml
backend/: Dockerfile.backend  prompts.yaml  pyproject.toml
backend/tests/: __init__.py  test_api.py  test_base_model.py  test_memory.py  test_orchestrator.py  test_registry.py  test_schemas.py
backend/unilm/: main.py  memory.py  orchestrator.py
backend/unilm/agents/: base.py  coding_agent.py  planner.py  reviewer.py  summerizer.py  theoretician.py
backend/unilm/agents/utils/: registry.py
backend/unilm/api/v1/: api.py
frontend/: Dockerfile.frontend  package.json
frontend/src/app/: page.tsx
prompts/: prepare_prompts_for_eval.py  promptfooconfig.yaml
unilm/app/: api.py  app.py  main.py  memory.py  models.py  orchestrator.py  prompts.yaml  router.py  test.py  utils.py
unilm/app/agents/: base.py  coding_agent.py  planner.py  registry.py  reviewer.py  schemas.py  summerizer.py  theoretician.py
unilm/app/agents/utils/: registry.py  schemas.py
unilm/app/api/v1/: api.py
unilm/frontend/: package-lock.json
unilm/frontend/src/app/: globals.css  page.tsx
