[project]
name = "unilm"
version = "0.1.0"
description = "LLM orchestrator for students with intent classification and streaming responses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "langgraph>=1.0.8",
    "litellm>=1.81.12",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "redis>=7.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.0.285",
    "black>=23.7.0",
    "mypy>=1.4.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "httpx>=0.24.0",
]

[tool.ruff]
src = ["unilm"] # Relatywnie do folderu backend/

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"